test/fails/bad_tags/par_basics1.lgl
tag a is vec2;
tag par<`t : vec2> is vec3;

void main() {
    par<vec3> fail = [1., 1., 1.];
}